Actualizadas las traducciones.

--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1664,7 +1664,7 @@
     "warehouses": "Warehouses",
     "warning": "Attention",
     "warnings": "Warnings",
-    "weak-password": "La contraseña debe tener al menos 8 caracteres, con números y letras.",
+    "weak-password": "The password must be at least 8 characters long, containing numbers and letters.",
     "web": "Web",
     "website": "Website",
     "wednesday": "Wednesday",
