--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -280,7 +280,7 @@
     "companies": "Empresas",
     "company": "Empresa",
     "company-commission-info": "Só se aplicará á empresa seleccionada",
-    "company-iban-changed": "Cambióse o iban da conta bancaria %account%. Antes era %old% e agora é %new%",
+    "company-iban-changed": "Cambiouse o iban da conta bancaria %account%. Antes era %old% e agora é %new%",
     "company-manager": "Xerente de empresa",
     "company-name": "Nome da empresa",
     "company-tax": "Imposto de sociedades",
@@ -1488,7 +1488,7 @@
     "supplier-estimation": "Orzamento de provedor",
     "supplier-estimations": "Estimacións de provedores",
     "supplier-have-no-iban": "O provedor %supplier% non ten IBAN (conta bancaria)",
-    "supplier-iban-changed": "Se ha cambiado el iban de la cuenta bancaria del proveedor %codproveedor%. Antes era %old% y ahora es %new%",
+    "supplier-iban-changed": "Cambiouse o iban da conta bancaria do provedor %codproveedor%. Antes era %old% e agora é %new%",
     "supplier-invoice": "Factura de provedor",
     "supplier-invoice-deleted-successfully": "A factura de compra %docCode% foi eliminada con éxito.",
     "supplier-invoices": "Facturas do provedor",
