Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -56,6 +56,7 @@
     "add-file": "Afegir fitxer",
     "add-invoices": "Afegir factures",
     "add-new-plugin": "Afegir nou plugin",
+    "add-user": "Afegir usuari",
     "additional-text": "Text addicional",
     "address": "Adreça",
     "addresses": "Adreces",
