--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -56,6 +56,7 @@
     "add-file": "Přidat soubor",
     "add-invoices": "Añadir facturas",
     "add-new-plugin": "Añadir nuevo plugin",
+    "add-user": "Přidat uživatele",
     "additional-text": "Texto adicional",
     "address": "Adresa",
     "addresses": "Adresy",
