--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -56,6 +56,7 @@
     "add-file": "Add file",
     "add-invoices": "Add invoices",
     "add-new-plugin": "Add new plugin",
+    "add-user": "Add user",
     "additional-text": "Additional text",
     "address": "Address",
     "addresses": "Addresses",
