--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -56,6 +56,7 @@
     "add-file": "Fitxategi bat gehitu",
     "add-invoices": "Gehitu fakturak",
     "add-new-plugin": "Plugin berria gehitu",
+    "add-user": "Erabiltzaile bat gehitu",
     "additional-text": "Testu gehigarria",
     "address": "Helbidea",
     "addresses": "Helbideak",
@@ -280,7 +281,7 @@
     "companies": "Enpresak",
     "company": "Enpresa",
     "company-commission-info": "Aukeratutako enpresari bakarrik aplikatuko zaio",
-    "company-iban-changed": "Se ha cambiado el iban de la cuenta bancaria %account%. Antes era %old% y ahora es %new%",
+    "company-iban-changed": "%account% banku kontuaren iban-a aldatu da. Lehen %old% zen eta orain %new% da.",
     "company-manager": "Enpresa kudeatzailea",
     "company-name": "Enpresaren izena",
     "company-tax": "Sozialen gaineko zerga",
