--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -56,6 +56,7 @@
     "add-file": "Engadir arquivo",
     "add-invoices": "Engadir facturas",
     "add-new-plugin": "Engadir novo complemento",
+    "add-user": "Engadir usuario",
     "additional-text": "Texto adicional",
     "address": "Enderezo",
     "addresses": "Direccións",
