--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -56,6 +56,7 @@
     "add-file": "Aggiungi file",
     "add-invoices": "Aggiungi fatture",
     "add-new-plugin": "Aggiungi un nuovo plug-in",
+    "add-user": "Aggiungi utente",
     "additional-text": "Testo aggiuntivo",
     "address": "Indirizzo",
     "addresses": "indirizzi",
