--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -56,6 +56,7 @@
     "add-file": "Adicionar ficheiro",
     "add-invoices": "Adicionar Faturas",
     "add-new-plugin": "Adicionar novo plugin",
+    "add-user": "Adicionar utilizador",
     "additional-text": "Texto adicional",
     "address": "Endereço",
     "addresses": "Endereços",
@@ -1331,7 +1332,7 @@
     "rules": "Regras",
     "run": "executar",
     "running-plugin-cron": "Executando o cron do plugin %pluginName%",
-    "running-work-queue": "Ejecutando la cola de eventos de trabajo",
+    "running-work-queue": "Executando a fila de eventos de trabalho",
     "sales": "Vendas",
     "sales-invoice": "Fatura de vendas",
     "sales-rate": "Taxa de vendas",
