--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -56,6 +56,7 @@
     "add-file": "Afegir fitxer",
     "add-invoices": "Afegir factures",
     "add-new-plugin": "Afegir un nou complement",
+    "add-user": "Afegir usuari",
     "additional-text": "Text adicional",
     "address": "Direcció",
     "addresses": "Direccions",
