--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -56,6 +56,7 @@
     "add-file": "Datei hinzufügen",
     "add-invoices": "Rechnungen hinzufügen",
     "add-new-plugin": "Neues Plugin hinzufügen",
+    "add-user": "Benutzer hinzufügen",
     "additional-text": "Zusatztext",
     "address": "Adresse",
     "addresses": "Adressen",
@@ -1664,7 +1665,7 @@
     "warehouses": "Lagerhallen",
     "warning": "<b>Warnung<\/b>",
     "warnings": "Warnungen",
-    "weak-password": "La contraseña debe tener al menos 8 caracteres, con números y letras.",
+    "weak-password": "Das Passwort muss mindestens 8 Zeichen lang sein und Zahlen sowie Buchstaben enthalten.",
     "web": "web:",
     "website": "Webseite",
     "wednesday": "Mittwoch",
