--- a/Core/Translation/es_EC.json
+++ b/Core/Translation/es_EC.json
@@ -56,6 +56,7 @@
     "add-file": "Añadir archivo",
     "add-invoices": "Añadir facturas",
     "add-new-plugin": "Añadir nuevo plugin",
+    "add-user": "Añadir usuario",
     "additional-text": "Texto adicional",
     "address": "Dirección",
     "addresses": "Direcciones",
