--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -56,6 +56,7 @@
     "add-file": "Ajouter un fichier",
     "add-invoices": "Ajouter factures",
     "add-new-plugin": "Ajouter un nouveau plugin",
+    "add-user": "Ajouter utilisateur",
     "additional-text": "Texte aditionnel",
     "address": "Adresse",
     "addresses": "Adresses",
