--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -56,6 +56,7 @@
     "add-file": "Dodaj plik",
     "add-invoices": "Dodaj faktury",
     "add-new-plugin": "Dodaj nową wtyczkę",
+    "add-user": "Dodaj użytkownika",
     "additional-text": "Tekst dodatkowy",
     "address": "Adres",
     "addresses": "Adresy",
