--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -56,6 +56,7 @@
     "add-file": "Adicionar arquivo",
     "add-invoices": "adicionar faturas",
     "add-new-plugin": "Adicionar novo plugin",
+    "add-user": "Adicionar usuário",
     "additional-text": "texto adicional",
     "address": "Endereço",
     "addresses": "Endereços",
