Actualizadas las traducciones.

--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -281,7 +281,7 @@
     "companies": "Aziende",
     "company": "Azienda",
     "company-commission-info": "Si applicherà solo all'azienda selezionata",
-    "company-iban-changed": "Se ha cambiado el iban de la cuenta bancaria %account%. Antes era %old% y ahora es %new%",
+    "company-iban-changed": "È stato cambiato l'IBAN del conto bancario %account%. Prima era %old% e ora è %new%",
     "company-manager": "Direttore aziendale",
     "company-name": "Nome della ditta",
     "company-tax": "Imposta sulle società",
@@ -1332,7 +1332,7 @@
     "rules": "Regole",
     "run": "eseguire",
     "running-plugin-cron": "Esecuzione del cron del plugin %pluginName%",
-    "running-work-queue": "Ejecutando la cola de eventos de trabajo",
+    "running-work-queue": "Esecuzione della coda degli eventi di lavoro",
     "sales": "I saldi",
     "sales-invoice": "Fattura di vendita",
     "sales-rate": "Tasso di vendita",
