--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1332,7 +1332,7 @@
     "rules": "Arauak",
     "run": "Exekutatu",
     "running-plugin-cron": "FacturaScripts %pluginName% pluginaren cron exekutatzen",
-    "running-work-queue": "Ejecutando la cola de eventos de trabajo",
+    "running-work-queue": "Lan ekitaldien ilara exekutatzen",
     "sales": "Salmentak",
     "sales-invoice": "Salmenta faktura",
     "sales-rate": "Salmenta-tasa",
