--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1332,7 +1332,7 @@
     "rules": "Regras",
     "run": "executar",
     "running-plugin-cron": "Executando o cron do plugin %pluginName%",
-    "running-work-queue": "Ejecutando la cola de eventos de trabajo",
+    "running-work-queue": "Executando a fila de eventos de trabalho",
     "sales": "Vendas",
     "sales-invoice": "Fatura de vendas",
     "sales-rate": "Taxa de vendas",
@@ -1489,7 +1489,7 @@
     "supplier-estimation": "Estimativa de Fornecedor",
     "supplier-estimations": "Estimativas de Fornecedor",
     "supplier-have-no-iban": "O fornecedor %%supplier não tem IBAN (conta bancária)",
-    "supplier-iban-changed": "Foi alterado o iban da conta bancária do fornecedor %codproveedor%. Antes era %old% e agora é %new%",
+    "supplier-iban-changed": "O IBAN da conta bancária do fornecedor %codproveedor% foi alterado. Antes era %old% e agora é %new%",
     "supplier-invoice": "Fatura de Fornecedor",
     "supplier-invoice-deleted-successfully": "Fatura de compra %docCode% excluída com sucesso.",
     "supplier-invoices": "Faturas de Fornecedor",
