Actualizadas las traducciones.

--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1665,7 +1665,7 @@
     "warehouses": "Magazyny",
     "warning": "Uwaga",
     "warnings": "Ostrzeżenia",
-    "weak-password": "La contraseña debe tener al menos 8 caracteres, con números y letras.",
+    "weak-password": "Hasło musi mieć co najmniej 8 znaków, w tym cyfry i litery.",
     "web": "Strona internetowa",
     "website": "Strona internetowa",
     "wednesday": "Środa",
