--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -284,7 +284,7 @@
     "company-iban-changed": "Se ha cambiado el iban de la cuenta bancaria %account%. Antes era %old% y ahora es %new%",
     "company-manager": "Gerente da empresa",
     "company-name": "Nome da empresa",
-    "company-tax": "Imposto de renda",
+    "company-tax": "Imposto de empresas",
     "company-warehouse": "Empresa\/Armazém",
     "comparative": "Comparativo",
     "compared": "Comparado",
@@ -1332,7 +1332,7 @@
     "rules": "Regras",
     "run": "executar",
     "running-plugin-cron": "Executando o cron do plugin %pluginName%",
-    "running-work-queue": "Executando a fila de eventos de trabalho",
+    "running-work-queue": "Executando a fila de trabalho",
     "sales": "Vendas",
     "sales-invoice": "Fatura de vendas",
     "sales-rate": "Taxa de vendas",
@@ -1528,7 +1528,7 @@
     "taxes": "Impostos",
     "telemetry-data-to-send": "dados de telemetria para enviar",
     "telephone-prefix": "Prefixo telefônico",
-    "template": "Modelo",
+    "template": "Template",
     "template-error": "Erro de modelo",
     "template-not-found": "Modelo não encontrado",
     "templates": "Modelos",
