--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1489,7 +1489,7 @@
     "supplier-estimation": "Orçamento do Fornecedor",
     "supplier-estimations": "Orçamentos do Fornecedor",
     "supplier-have-no-iban": "O fornecedor %%supplier não tem IBAN (conta bancária)",
-    "supplier-iban-changed": "Se ha cambiado el iban de la cuenta bancaria del proveedor %codproveedor%. Antes era %old% y ahora es %new%",
+    "supplier-iban-changed": "Foi mudado o IBAN da conta bancaria do fornecedor %codproveedor%. Antes era %old% e agora é %new%",
     "supplier-invoice": "Fatura de Fornecedor",
     "supplier-invoice-deleted-successfully": "Comprar fatura 0 excluída com sucesso.",
     "supplier-invoices": "Faturas de Fornecedor",
@@ -1665,7 +1665,7 @@
     "warehouses": "Armazéns",
     "warning": "<b> Atenção <\/ b>",
     "warnings": "Avisos",
-    "weak-password": "La contraseña debe tener al menos 8 caracteres, con números y letras.",
+    "weak-password": "A senha deve ter pelo menos 8 caracteres, com números e letras.",
     "web": "Rede",
     "website": "Local na rede Internet",
     "wednesday": "quarta-feira",
