--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1665,7 +1665,7 @@
     "warehouses": "Biltegiak",
     "warning": "Erne",
     "warnings": "Oharrak",
-    "weak-password": "La contraseña debe tener al menos 8 caracteres, con números y letras.",
+    "weak-password": "Pasahitza gutxienez 8 karaktere izan behar ditu, zenbakiak eta letrez osatua.",
     "web": "Web",
     "website": "Webgunea",
     "wednesday": "Asteazkena",
