--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1489,7 +1489,7 @@
     "supplier-estimation": "Devis fournisseur",
     "supplier-estimations": "Budgets des fournisseurs",
     "supplier-have-no-iban": "Le fournisseur %supplier% n'a pas d'IBAN (compte bancaire)",
-    "supplier-iban-changed": "L'IBAN du compte bancaire du fournisseur %codproveedor% a été changé. Avant, c'était %old% et maintenant c'est %new%",
+    "supplier-iban-changed": "L'IBAN du compte bancaire du fournisseur %codproveedor% a été modifié. Auparavant, c'était %old% et maintenant c'est %new%",
     "supplier-invoice": "Facture fournisseur",
     "supplier-invoice-deleted-successfully": "La facture d'achat %docCode% a été supprimée avec succès.",
     "supplier-invoices": "Factures fournisseurs",
@@ -1665,7 +1665,7 @@
     "warehouses": "Entrepôts",
     "warning": "Avertissement",
     "warnings": "Avis",
-    "weak-password": "Le mot de passe doit comporter au moins 8 caractères, avec des chiffres et des lettres.",
+    "weak-password": "Le mot de passe doit comporter au moins 8 caractères, contenant des chiffres et des lettres.",
     "web": "Web",
     "website": "Site Internet",
     "wednesday": "Mercredi",
