--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1489,7 +1489,7 @@
     "supplier-estimation": "Stima fornitore",
     "supplier-estimations": "Stime dei fornitori",
     "supplier-have-no-iban": "Il fornitore %supplier% non ha IBAN (conto bancario)",
-    "supplier-iban-changed": "È stato cambiato l'iban del conto bancario del fornitore %codproveedor%. Prima era %old% e ora è %new%",
+    "supplier-iban-changed": "È stato cambiato l'IBAN del conto bancario del fornitore %codproveedor%. Prima era %old% e ora è %new%",
     "supplier-invoice": "Fattura del Fornitore",
     "supplier-invoice-deleted-successfully": "La fattura di acquisto 0 è stata cancellata correttamente.",
     "supplier-invoices": "Fatture Fornitori",
