Actualizadas las traducciones.

--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1665,7 +1665,7 @@
     "warehouses": "Armazéns",
     "warning": "<b>Atenção<\/b>",
     "warnings": "Avisos",
-    "weak-password": "La contraseña debe tener al menos 8 caracteres, con números y letras.",
+    "weak-password": "A senha deve ter pelo menos 8 caracteres, com números e letras.",
     "web": "Web",
     "website": "Website",
     "wednesday": "quarta-feira",
