--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1489,7 +1489,7 @@
     "supplier-estimation": "Szacowanie dostawcy",
     "supplier-estimations": "Kosztorysy dostawców",
     "supplier-have-no-iban": "Dostawca %%supplier nie posiada IBAN (numer konta bankowego)",
-    "supplier-iban-changed": "Se ha cambiado el iban de la cuenta bancaria del proveedor %codproveedor%. Antes era %old% y ahora es %new%",
+    "supplier-iban-changed": "Zmieniono IBAN konta bankowego dostawcy %codprove Vendor%. Wcześniej to było %old%, a teraz jest %new%",
     "supplier-invoice": "Faktura dostawcy",
     "supplier-invoice-deleted-successfully": "Faktura zakupu %docCode% została pomyślnie usunięta.",
     "supplier-invoices": "Faktury dostawców",
