--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1489,7 +1489,7 @@
     "supplier-estimation": "Lieferanten-Kostenvoranschlag",
     "supplier-estimations": "Lieferanten-Kostenvoranschläge",
     "supplier-have-no-iban": "Der Lieferant %%supplier hat keine IBAN (Bankkonto)",
-    "supplier-iban-changed": "Der IBAN des Kontos des Lieferanten %codproveedor% wurde geändert. Er war vorher %old% und ist jetzt %new%.",
+    "supplier-iban-changed": "Der IBAN des Kontos des Lieferanten %codproveider% wurde geändert. Er war vorher %old% und ist jetzt %new%.",
     "supplier-invoice": "Lieferantenrechnung",
     "supplier-invoice-deleted-successfully": "Kaufrechnung 0 wurde erfolgreich gelöscht.",
     "supplier-invoices": "Lieferantenrechnungen",
