Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -316,7 +316,7 @@
     "conversion-rate-not-0": "La tasa de conversión no puede ser 0.",
     "convert-into-customer": "Convertir en cliente",
     "convert-into-supplier": "Convertir en proveedor",
-    "cookies": "Cookies",
+    "cookies": "Souhlasy se soubory cookie",
     "copy": "Copiar",
     "copy-p": "Rellene el formulario para hacer una copia de este modelo",
     "copy-subaccounts": "Copiar plan contable",
