--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1424,7 +1424,7 @@
     "sort-by-date-desc": "Ordenar por data desc.",
     "sort-by-ref-asc": "Ordenar por referência asc.",
     "sort-by-ref-desc": "Ordenar por referência desc.",
-    "sorted-asc": "Ordenado ascendente",
+    "sorted-asc": "Ordenado ascendentes",
     "sorted-desc": "Ordenado de forma descendente",
     "source": "Fonte",
     "source-code": "Código fonte",
