--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1562,7 +1562,7 @@
     "total": "Gesamt",
     "total-amount": "Gesamtbetrag",
     "total-cost": "Gesamtkosten",
-    "total-pending": "Gesamtbetrag ausstehend",
+    "total-pending": "Ausstehender Gesamtbetrag",
     "total-purchases": "Gesamteinkäufe",
     "total-sales": "Gesamtverkäufe",
     "total-value-error": "Gesamtmenge von 0 1 falsch (2). Richtige Menge: 3",
