--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -281,7 +281,7 @@
     "companies": "Empresas",
     "company": "Empresa",
     "company-commission-info": "Só se aplicará á empresa seleccionada",
-    "company-iban-changed": "Cambiouse o iban da conta bancaria %account%. Antes era %old% e agora é %new%",
+    "company-iban-changed": "Cambiouse o IBAN da conta bancaria %account%. Antes era %old% e agora é %new%",
     "company-manager": "Xerente de empresa",
     "company-name": "Nome da empresa",
     "company-tax": "Imposto de sociedades",
@@ -1489,7 +1489,7 @@
     "supplier-estimation": "Orzamento de provedor",
     "supplier-estimations": "Estimacións de provedores",
     "supplier-have-no-iban": "O provedor %supplier% non ten IBAN (conta bancaria)",
-    "supplier-iban-changed": "Cambiouse o iban da conta bancaria do provedor %codproveedor%. Antes era %old% e agora é %new%",
+    "supplier-iban-changed": "Cambiouse o IBAN da conta bancaria do provedor %codproveedor%. Antes era %old% e agora é %new%",
     "supplier-invoice": "Factura de provedor",
     "supplier-invoice-deleted-successfully": "A factura de compra %docCode% foi eliminada con éxito.",
     "supplier-invoices": "Facturas do provedor",
@@ -1665,7 +1665,7 @@
     "warehouses": "Almacéns",
     "warning": "Atención",
     "warnings": "Avisos",
-    "weak-password": "A contrasinal debe ter ao menos 8 caracteres, con números e letras.",
+    "weak-password": "A contrasinal debe ter polo menos 8 caracteres, con números e letras.",
     "web": "Web",
     "website": "Sitio web",
     "wednesday": "Mércores",
