Actualizadas las traducciones.

--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1665,7 +1665,7 @@
     "warehouses": "magazzini",
     "warning": "Attenzione",
     "warnings": "Avvisi",
-    "weak-password": "La password deve contenere almeno 8 caratteri, con numeri e lettere.",
+    "weak-password": "La password deve avere almeno 8 caratteri, con numeri e lettere.",
     "web": "web:",
     "website": "Sito web",
     "wednesday": "Mercoledì",
