Actualizadas las traducciones.

--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1146,7 +1146,7 @@
     "percentage-vat": "% IVA",
     "period": "Período",
     "personalized": "Personalizado",
-    "pgsql-endpoint": "Endpoint PostgreSQL",
+    "pgsql-endpoint": "Ponto de extremidade PostgreSQL",
     "pgsql-ssl-mode": "Modo SSL PostgreSQL",
     "phase": "Fase",
     "phone": "telefone",
