Actualizadas las traducciones.

--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1617,7 +1617,7 @@
     "updated-records": "Zaktualizowano %updatedRecords% rekordów z %totalRecords%",
     "updater": "Aktualizacja",
     "updates-available": "Dostępne aktualizacje",
-    "updates-available-p": "Dostępne są aktualizacje FacturaScripts. Proszę kliknąć aktualizator i pobrać nową wersję. Aktualizacje naprawiają błędy i dodają nowe funkcje.",
+    "updates-available-p": "Dostępne są aktualizacje FacturaScripts. Proszę kliknąć w aktualizator i pobrać nową wersję. Aktualizacje naprawiają błędy i dodają nowe funkcje.",
     "updating-attached-relations": "Aktualizowanie powiązań z załączonymi plikami",
     "upload-file": "Prześlij plik",
     "uploaded-at": "Załadowano w",
