--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1665,7 +1665,7 @@
     "warehouses": "Almagasens",
     "warning": "Atenció",
     "warnings": "Advertiments",
-    "weak-password": "La contrasenya ha de tenir almenys 8 caràcters, amb números i lletres.",
+    "weak-password": "La contrasenya ha de tindre almenys 8 caràcters, amb números i lletres.",
     "web": "Web",
     "website": "Lloc web",
     "wednesday": "wednesday",
