Actualizadas las traducciones.

--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1549,7 +1549,7 @@
     "thousands-separator": "Milakoen banatzailea",
     "thursday": "Osteguna",
     "ticket": "Tiketa",
-    "tickets": "Tiketak",
+    "tickets": "Txartelak",
     "time": "Ordua",
     "timezone": "Ordu-zona",
     "title": "Izenburua",
