Actualizadas las traducciones.

--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -936,7 +936,7 @@
     "manufacturer-code": "Fabrikatzailearen kodea",
     "manufacturers": "Fabrikatzaileak",
     "manufacturing": "Fabrikazioa",
-    "march": "Martxo",
+    "march": "Martxo.",
     "margin": "Marjina",
     "margin-top": "Goiko marjina",
     "mark-as-homepage": "Hasierako orria ezarri",
@@ -1146,7 +1146,7 @@
     "percentage-vat": "BEZ %",
     "period": "Denboraldia",
     "personalized": "Pertsonalizatua",
-    "pgsql-endpoint": "PostgreSQL amaiera",
+    "pgsql-endpoint": "PostgreSQL amaiera.",
     "pgsql-ssl-mode": "PostgreSQL SSL modua",
     "phase": "Fasea",
     "phone": "Telefonoa",
